k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pyservice-deployment
  labels:
    app: pyservice
spec:
  replicas: 2
  selector:
    matchLabels:
      app: pyservice
  template:
    metadata:
      labels:
        app: pyservice
    spec:
      containers:
        - name: pyservice
          image: dockerhub/pyservice:0.0.1
          ports:
            - containerPort: 8000
      imagePullSecrets:
        - name: dockerconfigjson-github-com
