k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pyservice
spec:
  selector:
    app.kubernetes.io/name: pyservice
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
